[gd_scene load_steps=3 format=2]

[ext_resource path="res://Weapons/Bullet/Bullet.png" type="Texture" id=1]
[ext_resource path="res://Weapons/Bullet/Bullet.gd" type="Script" id=2]

[node name="Bullet" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.225

[node name="SpeedTween" type="Tween" parent="."]

[node name="ScaleTween" type="Tween" parent="."]

[connection signal="timeout" from="Timer" to="." method="die_out"]
[connection signal="tween_all_completed" from="SpeedTween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="ScaleTween" to="." method="_on_Tween_tween_all_completed"]
